--- a/app/templates/formulario.html
+++ b/app/templates/formulario.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastrar Pedido de Autorização</title>
+
+  <link rel="stylesheet" href="{{ url_for('static', filename='core-lite.css') }}">
+
   <style>
     /* Estilos gerais inalterados */
-    body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 20px; }
     .container { max-width: 600px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1); }
     h1 { text-align: center; color: #333; }
     label { font-weight: bold; display: block; margin-top: 10px; }
@@ -47,10 +49,22 @@
 </head>
 <body>
 
-<div class="navbar">
-  <span>Bem-vindo, {{ current_user.username }} / {{ current_user.nome_empresa }} / {{ current_user.cnpj }}</span>
-  <a class="btn-logout" href="{{ url_for('auth.logout') }}">🚪 Sair</a>
+<header class="br-header mb-4" id="header" data-sticky="data-sticky">
+<div class="container-lg">
+<div class="header-top">
+<div class="header-logo">
+<img class="img-logo" src="https://receitafederal.github.io/formularios/src/html/remessas_internacionais/componentes/cabecalho/img/receita-federal-logo.png" alt="logo" style="width: 200px; height: auto;">
 </div>
+
+<div class="navbar">
+  <span>Bem-vindo, {{ current_user.username }}</span>
+  <a class="btn-logout" href="{{ url_for('auth.logout') }}">Sair</a>
+</div>
+
+</div>
+</div>
+</header>
+
 
 <div class="container">
   <h1>Cadastrar Pedido de Autorização</h1>
