--- a/app/templates/gerenciar_alertas.html
+++ b/app/templates/gerenciar_alertas.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Gerenciar Alertas</title>
+	
+	<link rel="stylesheet" href="{{ url_for('static', filename='core-lite.css') }}">
+	
     <style>
         /* Estilização básica */
         body { font-family: Arial, sans-serif; margin: 20px; }
@@ -10,9 +13,29 @@
         input, select { padding: 5px; margin: 5px 0; }
         table { width: 100%; border-collapse: collapse; }
         th, td { padding: 8px; border: 1px solid #ddd; text-align: left; }
+		.navbar { display: flex; justify-content: space-between; align-items: center; background: #007bff; color: white; padding: 10px 20px; border-radius: 5px; margin-bottom: 20px; }
+		.btn-logout { text-decoration: none; background-color: red; color: white; padding: 8px 12px; border-radius: 5px; font-weight: bold; }
+		.btn-logout:hover { background-color: darkred; }
     </style>
 </head>
 <body>
+
+<header class="br-header mb-4" id="header" data-sticky="data-sticky">
+<div class="container-lg">
+<div class="header-top">
+<div class="header-logo">
+<img class="img-logo" src="https://receitafederal.github.io/formularios/src/html/remessas_internacionais/componentes/cabecalho/img/receita-federal-logo.png" alt="logo" style="width: 200px; height: auto;">
+</div>
+
+<div class="navbar">
+  <span>Bem-vindo, {{ current_user.username }}</span>
+  <a class="btn-logout" href="{{ url_for('auth.logout') }}">Sair</a>
+</div>
+
+</div>
+</div>
+</header>
+
     <h1>Gerenciar Alertas</h1>
 
     <h2>Criar Novo Alerta</h2>
