--- a/app/templates/detalhes-pedido.html
+++ b/app/templates/detalhes-pedido.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do Pedido</title>
+
+<link rel="stylesheet" href="{{ url_for('static', filename='core-lite.css') }}">
+  
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
         margin: 20px;
     }
     .container {
@@ -122,11 +124,21 @@
 </head>
 <body>
 
-<div class="navbar">
-    <span>Bem-vindo, {{ current_user.username }}</span>
-    <a class="btn-logout" href="{{ url_for('auth.logout') }}">🚪 Sair</a>
+<header class="br-header mb-4" id="header" data-sticky="data-sticky">
+<div class="container-lg">
+<div class="header-top">
+<div class="header-logo">
+<img class="img-logo" src="https://receitafederal.github.io/formularios/src/html/remessas_internacionais/componentes/cabecalho/img/receita-federal-logo.png" alt="logo" style="width: 200px; height: auto;">
 </div>
 
+<div class="navbar">
+  <span>Bem-vindo, {{ current_user.username }}</span>
+  <a class="btn-logout" href="{{ url_for('auth.logout') }}">Sair</a>
+</div>
+
+</div>
+</div>
+</header>
 
 <div class="container">
     <h1>Detalhes do Pedido</h1>
