--- a/app/templates/users/create.html
+++ b/app/templates/users/create.html
@@ -3,15 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Criar Usuário</title>
+	<link rel="stylesheet" href="{{ url_for('static', filename='core-lite.css') }}">
     <style>
-        body { font-family: Arial, sans-serif; background-color: #f4f4f4; padding: 20px; }
+        body { font-family: Arial, sans-serif; padding: 20px; }
         .container { background: white; padding: 20px; border-radius: 10px; max-width: 400px; margin: auto; box-shadow: 2px 2px 10px rgba(0,0,0,0.1); }
         input, select { width: 100%; padding: 10px; margin-top: 10px; border: 1px solid #ddd; border-radius: 5px; }
         button { width: 100%; padding: 10px; margin-top: 20px; border: none; background-color: #007bff; color: white; border-radius: 5px; cursor: pointer; }
         button:hover { background-color: #0056b3; }
+		.navbar { display: flex; justify-content: space-between; align-items: center; background: #007bff; color: white; padding: 10px 20px; border-radius: 5px; margin-bottom: 20px; }
+		.btn-logout { text-decoration: none; background-color: red; color: white; padding: 8px 12px; border-radius: 5px; font-weight: bold; }
+		.btn-logout:hover { background-color: darkred; }
     </style>
 </head>
 <body>
+
+<header class="br-header mb-4" id="header" data-sticky="data-sticky">
+<div class="container-lg">
+<div class="header-top">
+<div class="header-logo">
+<img class="img-logo" src="https://receitafederal.github.io/formularios/src/html/remessas_internacionais/componentes/cabecalho/img/receita-federal-logo.png" alt="logo" style="width: 200px; height: auto;">
+</div>
+
+<div class="navbar">
+  <span>Bem-vindo, {{ current_user.username }}</span>
+  <a class="btn-logout" href="{{ url_for('auth.logout') }}">Sair</a>
+</div>
+
+</div>
+</div>
+</header>
+
     <div class="container">
         <h1>Criar Novo Usuário</h1>
         {% with messages = get_flashed_messages(with_categories=true) %}
