Corrige link no template detalhes-pedidos.html

--- a/app/templates/detalhes-pedido.html
+++ b/app/templates/detalhes-pedido.html
@@ -164,7 +164,7 @@
     </div>
 
     <div class="back">
-        <a href="lista-pedidos">⬅ Voltar à Lista</a>
+        <a href="{{ url_for('pedidos.exibir_pedidos') }}">⬅ Voltar à Lista</a>
     </div>
 </div>
 
