--- a/app/templates/users/list.html
+++ b/app/templates/users/list.html
@@ -29,7 +29,7 @@
 </div>
 
 <div class="navbar">
-  <span>Bem-vindo, {{ current_user.username }}</span>
+  <span>Olá, {{ current_user.username }} </span>
   <a class="btn-logout" href="{{ url_for('auth.logout') }}">Sair</a>
 </div>
 
